Added audit support Updated cmake to include certain constants Made boost optional not required Fixed spec Added iptables-restore support
Change-Id: I3b965023bd5c5a07612f80fa2e040454e7db42a2

--- a/conf/CMakeLists.txt
+++ b/conf/CMakeLists.txt
@@ -16,19 +16,11 @@
 #  limitations under the License
 #
 
-CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
-PROJECT (nether)
-INCLUDE (FindPkgConfig)
-SET (CMAKE_CXX_FLAGS "-std=c++11")
-SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+MESSAGE(STATUS "Installing config files")
 
-IF (NOT DEFINED SYSCONF_INSTALL_DIR)
-    SET(SYSCONF_INSTALL_DIR "/etc")
-ENDIF (NOT DEFINED SYSCONF_INSTALL_DIR)
+CONFIGURE_FILE(systemd/nether.service.in systemd/nether.service)
 
-IF (NOT DEFINED SYSTEMD_UNIT_DIR)
-    SET(SYSTEMD_UNIT_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
-ENDIF (NOT DEFINED SYSTEMD_UNIT_DIR)
-
-ADD_SUBDIRECTORY (src)
-ADD_SUBDIRECTORY (conf)
+INSTALL(FILES nether.policy DESTINATION ${SYSCONF_INSTALL_DIR}/nether)
+INSTALL(FILES nether.rules DESTINATION ${SYSCONF_INSTALL_DIR}/nether)
+INSTALL(FILES systemd/nether.service DESTINATION ${SYSTEMD_UNIT_DIR})
+INSTALL(FILES systemd/nether.service DESTINATION ${SYSTEMD_UNIT_DIR}/multi-user.target.wants)
