Fixed EOLs/TABs/spaces Included fixes and changes from change I16970c3dedd9071c970523a478fbf35e009d13ef as commented by Jan Olszak and Rafal Krypa
refer to https://review.tizen.org/gerrit/#/c/44086/ for details

Removed const qualifiers on method return types.
Removed unused parameters from method definitions.

Change-Id: Ic03f4b35cdb476005749d2c93a413a83c09490fd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,12 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 PROJECT (nether)
 INCLUDE (FindPkgConfig)
-SET (CMAKE_CXX_FLAGS "-std=c++11")
+IF (CMAKE_BUILD_TYPE MATCHES DEBUG)
+	SET (CMAKE_CXX_FLAGS "-g -Wall -Wextra -std=c++11")
+ELSE ()
+	SET (CMAKE_CXX_FLAGS "-O3 -fomit-frame-pointer -std=c++11")
+ENDIF (CMAKE_BUILD_TYPE MATCHES DEBUG)
+
 SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 IF (NOT DEFINED SYSCONF_INSTALL_DIR)
@@ -27,7 +32,7 @@ IF (NOT DEFINED SYSCONF_INSTALL_DIR)
 ENDIF (NOT DEFINED SYSCONF_INSTALL_DIR)
 
 IF (NOT DEFINED SYSTEMD_UNIT_DIR)
-    SET(SYSTEMD_UNIT_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
+	SET(SYSTEMD_UNIT_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
 ENDIF (NOT DEFINED SYSTEMD_UNIT_DIR)
 
 ADD_SUBDIRECTORY (src)
