Fix for bad policy install path
Change-Id: I90e8e565d8f9efd46c34833a74cf59012163d6b0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,7 +78,7 @@ TARGET_LINK_LIBRARIES (nether
 )
 
 ADD_DEFINITIONS (-DNETHER_RULES_PATH="${CMAKE_INSTALL_DIR}/etc/nether/nether.rules"
-					-DNETHER_POLICY_FILE="${CMAKE_INSTALL_DIR}/etc/nether/nether.rules"
+					-DNETHER_POLICY_FILE="${CMAKE_INSTALL_DIR}/etc/nether/nether.policy"
 )
 
 INSTALL (TARGETS nether RUNTIME DESTINATION bin)
