--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,9 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 PROJECT (nether)
 INCLUDE (FindPkgConfig)
 IF (CMAKE_BUILD_TYPE MATCHES DEBUG)
-	SET (CMAKE_CXX_FLAGS "-g -Wall -Wextra -std=c++11")
+	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 ELSE ()
-	SET (CMAKE_CXX_FLAGS "-O3 -fomit-frame-pointer -std=c++11")
+	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 ENDIF (CMAKE_BUILD_TYPE MATCHES DEBUG)
 
 SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
